--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start"
   },
   "dependencies": {
-    "event-emitter": "^0.3.5",
-    "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "naampje": "^1.0.1",
     "next": "9.3.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "shortid": "^2.2.15",
-    "simple-peer": "^9.6.2",
-    "socket.io": "^2.3.0"
+    "signalhub": "^4.9.0",
+    "webrtc-swarm": "https://github.com/nchapman/webrtc-swarm"
   }
 }
