--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "9.3.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-scroll-to-bottom": "^1.3.2",
     "sass": "^1.26.3",
     "shortid": "^2.2.15",
     "signalhub": "^4.9.0",
