--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scroll-to-bottom": "^1.3.2",
     "sass": "^1.26.3",
     "shortid": "^2.2.15",
-    "signalhub": "^4.9.0",
+    "signalhubws": "^1.0.12",
     "webrtc-swarm": "https://github.com/nchapman/webrtc-swarm"
   }
 }
