--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "dotenv": "^8.2.0",
     "js-sha256": "^0.9.0",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
