--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "decko": "^1.2.0",
+    "detectrtc": "^1.4.0",
     "dotenv": "^8.2.0",
     "jquery": "^3.5.0",
     "js-sha256": "^0.9.0",
@@ -23,8 +26,6 @@
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "sass": "^1.26.3",
-    "short-uuid": "^3.1.1",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3"
+    "short-uuid": "^3.1.1"
   }
 }
