--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^9.3.5",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-portal": "^4.2.1",
     "sass": "^1.26.3",
     "short-uuid": "^3.1.1"
   }
