--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -17,10 +18,12 @@
     "decko": "^1.2.0",
     "detectrtc": "^1.4.0",
     "dotenv": "^8.2.0",
+    "eslint-plugin-react": "^7.20.0",
     "jquery": "^3.5.0",
     "js-sha256": "^0.9.0",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
+    "lodash-decorators": "^6.0.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "next": "^9.3.5",
@@ -29,5 +32,15 @@
     "react-portal": "^4.2.1",
     "sass": "^1.26.3",
     "short-uuid": "^3.1.1"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.150",
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "eslint": "^7.0.0",
+    "typescript": "^3.9.2"
   }
 }
