--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx && tsc --noEmit"
+    "lint": "eslint . && stylelint styles/*.scss && tsc --noEmit",
+    "prettier": "eslint . --fix && stylelint styles/*.scss --fix"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -42,6 +43,13 @@
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
+    "prettier": "2.0.5",
+    "stylelint": "^13.5.0",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-prettier": "^1.1.2",
     "typescript": "^3.9.2"
   }
 }
