--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,15 @@
 {
-  "extends": ["stylelint-prettier/recommended"]
+  "plugins": [
+    "stylelint-order"
+  ],
+  "extends": [
+    "stylelint-prettier/recommended"
+  ],
+  "rules": {
+    "order/order": [
+      "custom-properties",
+      "declarations"
+    ],
+    "order/properties-alphabetical-order": true
+  }
 }
