--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "2.0.5",
     "stylelint": "^13.5.0",
     "stylelint-config-prettier": "^8.0.1",
+    "stylelint-order": "^4.0.0",
     "stylelint-prettier": "^1.1.2",
     "typescript": "^3.9.2"
   }
