--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-portal": "^4.2.1",
+    "react-toastify": "^6.0.5",
     "sass": "^1.26.3",
     "short-uuid": "^3.1.1"
   },
