--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
     "prettier": "eslint . --fix && stylelint styles/*.scss --fix"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@types/lodash": "^4.14.150",
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@types/react-portal": "^4.0.2",
-    "decko": "^1.2.0",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "detectrtc": "^1.4.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
     "jquery": "^3.5.0",
     "js-sha256": "^0.9.0",
     "localforage": "^1.7.3",
@@ -28,30 +38,18 @@
     "lodash-decorators": "^6.0.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
-    "next": "^9.3.5",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
+    "next": "^9.4.4",
+    "prettier": "2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-portal": "^4.2.1",
     "react-toastify": "^6.0.5",
     "sass": "^1.26.3",
-    "short-uuid": "^3.1.1"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.150",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
-    "prettier": "2.0.5",
+    "short-uuid": "^3.1.1",
     "stylelint": "^13.5.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-order": "^4.0.0",
     "stylelint-prettier": "^1.1.2",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.3"
   }
 }
