Initial antd integration.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "eslint . --fix && stylelint styles/*.scss --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -21,9 +22,9 @@
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@types/react-portal": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
+    "antd": "^4.3.1",
     "detectrtc": "^1.4.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.0.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
     "jquery": "^3.5.0",
     "js-sha256": "^0.9.0",
+    "less": "^3.11.2",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "lodash-decorators": "^6.0.1",
@@ -42,9 +44,7 @@
     "prettier": "2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-portal": "^4.2.1",
-    "react-toastify": "^6.0.5",
-    "sass": "^1.26.3",
+    "sass": "^1.26.7",
     "short-uuid": "^3.1.1",
     "stylelint": "^13.5.0",
     "stylelint-config-prettier": "^8.0.1",
